--- a/gb/23/2/28/n13940105.md
+++ b/gb/23/2/28/n13940105.md
@@ -6,13 +6,13 @@
 <h6>2023年2月28日下午，台东县医师公会理事长何活发观赏神韵世界艺术团在高雄文化中心的第一场演出。（罗瑞勋／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2023年03月01日讯】（大纪元记者李怡欣台湾高雄报导）第二次看<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>后，台东县医师公会理事长何活发赞赏表示，“神韵节目编排得越来越先进，配合那个声光，还有那个<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%A4%A9%E5%B9%95.md#1">天幕</a>，都是无缝接轨，表现得很流畅。”“从服装、仪容、<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md#1">舞蹈</a>的水准，配合管弦乐的演出，真的是很震撼的场面，而且他们的舞蹈都很专业。”</p>
-<p>2023年2月28日午间，美国<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>世界艺术团在<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%AB%98%E9%9B%84%E5%B8%82%E7%AB%8B%E6%96%87%E5%8C%96%E4%B8%AD%E5%BF%83%E8%87%B3%E5%BE%B7%E5%A0%82.md#1">高雄市立文化中心至德堂</a>展开当地第一场演出，“神韵充满正向能量，当然是传递很强的正向能量啦！”何活发表示，他认为，这股正面能量对社会有益，“会有安定的作用，会有鼓励人心向上的作用。”</p>
+	<p>【大纪元2023年03月01日讯】（大纪元记者李怡欣台湾高雄报导）第二次看<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>后，台东县医师公会理事长何活发赞赏道，“神韵节目编排越来越先进，配合那个声光，还有那个<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%A4%A9%E5%B9%95.md#1">天幕</a>，（它们之间）都是无缝接轨，很流畅。”“从服装、仪容、<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md#1">舞蹈</a>的水准，配合管弦乐的演出，真的是很震撼的场面。”</p>
+<p>2023年2月28日午间，美国<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>世界艺术团在<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%AB%98%E9%9B%84%E5%B8%82%E7%AB%8B%E6%96%87%E5%8C%96%E4%B8%AD%E5%BF%83%E8%87%B3%E5%BE%B7%E5%A0%82.md#1">高雄市立文化中心至德堂</a>展开当地第一场演出，“神韵充满正向能量，当然是传递很强的正向能量啦。”何活发认为，这股正向能量对社会有益，“会有安定的作用，会有鼓励人心向上的作用。”</p>
 <p>他细述着刚刚看过的节目内容说，“当然<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md#1">舞蹈</a>方面很专业，每个舞蹈的演员技术也都一致，平常训练得很好，加上配乐，真的是很震撼的场面，表现得很好。”“男生的古典舞，女生的《水袖》舞蹈，动作都很一致、很漂亮。当然是世界一流的舞蹈水准，服装方面也配合得很好。”</p>
-<p>谈到演出中表现《西游记》、《三国演义》等传统故事，何活发说，“很棒，配合现在科技的动态<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%A4%A9%E5%B9%95.md#1">天幕</a>，配合得很好，演出看起来真的是天衣无缝，就是说连接得真是很棒。”“这个场面也是很震撼，而且很完美。”</p>
-<p>何活发行医40多年，曾获“2018年台湾医疗典范奖”，他对节目中演绎中国法轮大法修炼者被活摘器官的故事，特别印象深刻，“因为我们从事医师的工作，对这个也很敏感，说真的，大陆的这种行为，实在是很不人道。”</p>
-<p>他继续说道，“中共不人道的摘取活体器官，真的是全世界人民所共愤的，在我们医师的立场，当然是很不忍心，用活人做活体器官摘除。”他强调，“当然在我们台湾绝对没有这种情况，那是一个很残忍、很不人道的行为。当然全世界都应该要极力反对的。”</p>
-<p>对于“真善忍”这三个字，何活发觉得其中深蕴内涵，“这个意义很深远，只要我们大众朝这方面来做，或者是我们的政府人员或一些政治家朝这一方面来做的话，那世界会更和平，社会将更谐和。”</p>
+<p>谈到演出中呈现的《西游记》《三国演义》等传统故事，何活发说，“很棒。（故事情节）配合现在科技的动态<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%A4%A9%E5%B9%95.md#1">天幕</a>，配合得很好，演出看起来真的是天衣无缝，就是说连接得真是很棒。”“这个场面也是很震撼，而且很完美。”</p>
+<p>何活发行医40多年，曾获“2018年台湾医疗典范奖”，他对节目中有关中国法轮大法修炼者被活摘器官的故事的印象特别深刻，“因为我们从事医师的工作，对这个也很敏感，说真的，大陆的这种行为，实在是很不人道。”</p>
+<p>“中共不人道的摘取活体器官，真的是全世界人民所共愤的，在我们医师的立场，当然是很不忍心用活人做活体器官摘除。”他说，“当然在我们台湾绝对没有这种情况，那是一个很残忍、很不人道的行为。当然全世界都应该要极力反对的。”</p>
+<p>对演出中出现的“真、善、忍”这三个字，何活发觉得其中深蕴内涵，“这个意义很深远，只要我们大众朝这方面来做，或者是我们的政府人员或一些政治家朝这一方面来做的话，那世界会更和平，社会将更谐和。”</p>
 <p>最后何活发表示，“当然希望大家都有机会来接触、欣赏神韵的节目，看完应该会更有活力、更促进健康。”</p>
 <p>责任编辑：汤豪</p>
 	
@@ -30,31 +30,31 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/30/n10099159.md#1" target="_blank">郑兢业：人吃与吃人（六）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/1/n10683927.md#1" target="_blank">一位中国乡下老师 获美国参众两院关注</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/8/n11372651.md#1" target="_blank">新州：豢养特务作恶 中共卑鄙无耻</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/24/n10804401.md#1" target="_blank">这些前中共警察所见证的奇迹</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/7/n13924740.md#1">祈祷中神的回应：救人的神已来在人世</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13938144.md#1">有前世记忆作家：我在母亲怀孕4个月时投胎</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/6/n13923680.md#1">【古道人生】逃难女不甘受辱 一掌击退镖师</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/8/9/n13798623.md#1">时空可压缩？奇异的梦中之梦</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13937718.md#1">【未解之谜】植物口香糖？恶魔之果？槟榔的秘密</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/28/n13939980.md#1">【全球新闻】CIA局长确认情报 中共4月军援俄？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939632.md#1">【热点互动】白宫重提新冠病毒 中国实验室泄露</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939580.md#1">【直播预告】美众院听证中共对美国的威胁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/10/n13926811.md#1">在Costco购11种食品和日用品 不太实惠</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/26/n13938935.md#1">CIA局长：习和军方高层怀疑其入侵台湾能力</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13938290.md#1">医改遭抗议 中共医保局首次回应“钱哪去了”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939296.md#1">韩宜邦向林萱瑜求婚成功 获杨祐宁等艺人助攻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/26/n13938895.md#1">黄子佼晒与孟耿如对话图 曝夫妻俩恢复幽默感</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939607.md#1">遭传与古天乐结婚度蜜月 杨颖诉讼案判决出炉</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939192.md#1">顶7度寒流拍落水戏 王瞳黄文星在港边冻到发抖</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939573.md#1">晒与周润发爬山合照 江美仪重温两人缘分</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13938208.md#1">身高较矮可能活比较久？ 专家解释原因</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939267.md#1">访问200多名富翁 美作家分享其致富共通点</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/23/n13936587.md#1">提高生存率 1种新方法更准揪出早期癌症</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/20/n13934147.md#1">不想待在家？7个适合自由职业者工作的场所</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/16/n13930895.md#1">保健子宫 除了穴道按压 睡眠也很重要</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948717.md#1">汉宫的明珠——王昭君</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957760.md#1">【古道人生】灾荒中新婚妻子卖身救夫最终得团圆</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963507.md#1">【舞蹈三剑客】神韵舞蹈演员分享他们的12个旅行必备小物！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962873.md#1">【未解之谜】非洲UFO事件 数十小学生的奇遇</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963483.md#1">【新闻看点】中共军机越台海中线 习近平在备战</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963229.md#1">大陆直播主街头采访“你会上前线吗”舆论翻车</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962292.md#1">海南变香港？专家：党比法大 难造自由港</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963063.md#1">惧政权不稳 中共推“一村一警”扩大监控</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962773.md#1">分享冻龄秘笈遭酸民攻击 伊能静高EQ回应</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962350.md#1">孙艺真与玄彬结婚一周年 IG发照片庆祝</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962841.md#1">淡出歌坛四年 60岁王杰近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962128.md#1">黄秋生首演废佬角色 大赞影片导演真勇敢</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962445.md#1">研究：具侵略性的恶犬比较可能有坏主人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962417.md#1">血糖失控会掉发 2方法有助逆转秃头</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962594.md#1">这几种食物加辣酱 味道超乎想像</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13949145.md#1">想成为一个有钱人？ 财务自由的七大好处</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/2/28/n13940105.htm">医师公会理事长：神韵安定社会 激励人心</a></p><hr>
