--- a/gb/22/12/24/n13890924.md
+++ b/gb/22/12/24/n13890924.md
@@ -29,31 +29,31 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/21/n11061288.md#1" target="_blank">林辉：毁黄帝炎帝陵 中共与中华民族水火不容</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/3/n9920294.md#1" target="_blank">肝癌不治自愈 澳洲华商经历的奇迹</a></li>
+<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶/a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/3/n11630909.md#1" target="_blank">林辉：中共对万里长城的破坏与利用</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/31/n11489726.md#1" target="_blank">发生在两位西班牙人身上的奇迹</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/27/n13916753.md#1">目睹仓鼠死亡时灵魂上升 英女人生从此改观</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/28/n13917279.md#1">抓捕传闻纷扰 江泽民嫡孙能躲过大劫吗？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/28/n13916973.md#1">【未解之谜】神奇的测字</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/2/n13920654.md#1">音乐才子曾患白肺命危 默念九个字起死回生</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/23/n13913681.md#1">凡尘中人有仙缘 偶遇修道人出神通</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/1/n13920383.md#1">【探索时分】台湾为什么购买火山布雷系统</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/1/n13920378.md#1">【时事军事】F-16进入乌克兰 真正障碍在哪里</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/1/n13920389.md#1">【中国禁闻】胡鑫宇案说法不一 背后黑幕解析</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/31/n13919619.md#1">央视报C919首飞用空客充场 遭行家及网民嘲笑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/1/n13919797.md#1">专家：危机重重 习的新班子难救经济</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/31/n13919572.md#1">中共通报疫情下降 多地启动“核酸检测”？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/31/n13919533.md#1">40岁胡歌官宣已婚得女 透露妻子非公众人物</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/31/n13919634.md#1">不怕变“胖冰” 范冰冰过年到京城街头享美食</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/30/n13919017.md#1">终于完成18次抗癌治疗 朱芯仪直呼想哭</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/1/n13920411.md#1">胡歌秘婚当爸话题延烧 彭于晏意外登热搜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/1/n13920017.md#1">闻胡歌喜讯喊祝福 林依晨戏称彭于晏应该会困扰</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/24/n13914714.md#1">护心护肝又护肾 这种天然饮料有神奇功效</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/1/n13919945.md#1">美国富翁透露 有钱人如何用钱的8个秘密</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/30/n13918809.md#1">增强人体免疫力的9种自然方式</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/25/n13891656.md#1">上网轻松赚外快 利用10个免费网站兼差</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/1/n13920127.md#1">为什么民航机没有配备降落伞？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948717.md#1">汉宫的明珠——王昭君</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957760.md#1">【古道人生】灾荒中新婚妻子卖身救夫最终得团圆</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963507.md#1">【舞蹈三剑客】神韵舞蹈演员分享他们的12个旅行必备小物！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962873.md#1">【未解之谜】非洲UFO事件 数十小学生的奇遇</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963483.md#1">【新闻看点】中共军机越台海中线 习近平在备战</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963229.md#1">大陆直播主街头采访“你会上前线吗”舆论翻车</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962292.md#1">海南变香港？专家：党比法大 难造自由港</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963063.md#1">惧政权不稳 中共推“一村一警”扩大监控</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962773.md#1">分享冻龄秘笈遭酸民攻击 伊能静高EQ回应</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962350.md#1">孙艺真与玄彬结婚一周年 IG发照片庆祝</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962841.md#1">淡出歌坛四年 60岁王杰近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962128.md#1">黄秋生首演废佬角色 大赞影片导演真勇敢</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962445.md#1">研究：具侵略性的恶犬比较可能有坏主人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962417.md#1">血糖失控会掉发 2方法有助逆转秃头</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962594.md#1">这几种食物加辣酱 味道超乎想像</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13949145.md#1">想成为一个有钱人？ 财务自由的七大好处</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/12/24/n13890924.htm">2023财年支出法案 孟昭文确保亚太裔社区项目获数千万元</a></p><hr>
